[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-jsonform-stubs"
version = "2.23.0"
description = "Type stubs for django-jsonform library"
authors = [
    { name = "H4rryK4ne", email = "39696020+H4rryK4ne@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["typing", "stubs", "django-jsonform", "types"]
requires-python = ">=3.10"
dependencies = [
    "django>=3.2",
    "django-jsonform>=2.23.0",
    "django-stubs>=4.2.7",
]

[project.urls]
homepage = "https://github.com/H4rryK4ne/django-jsonform-stubs"

[project.optional-dependencies]
compatible-mypy = ["django-stubs[compatible-mypy]"]

[tool.black]
line_length = 120
include = '\.py'

[tool.isort]
profile = "black"
line_length = 120
